--- a/views/ftas/filter/third-party-name.html
+++ b/views/ftas/filter/third-party-name.html
@@ -19,11 +19,10 @@
           {% if values['16-or-older'] == true or (values['relationship-applicant'] == 'Social Worker' or values['relationship-applicant'] == 'Other') %}
             <h2>Explain why the applicant can't apply</h2>
             <p class="form-hint" id="dob-hint">We'll let you know what evidence to send.</span></p>
-            <textarea name="other-why-apply" id="other-why-apply" class="form-control textarea" aria-required="false"></textarea>
+            <textarea name="other-why-apply" id="other-why-apply" class="form-control textarea"></textarea>
             <br>
           {% endif %}
         {{/nunjucks}}
-
         {{#input-submit}}{{/input-submit}}
 
     {{/form}}
