--- a/views/start.html
+++ b/views/start.html
@@ -34,6 +34,8 @@
     <li><a href="./csig/referee-5">Countersignature flow</a></li>
     <li><a href="./csig/user-renominate">Renominate</a></li>
     <li><a href="./csig/user-renominate-anytime">Renominate anytime</a></li>
+    <li><a href="./csig/user?status=csig-completed">Csig received</a></li>
+    <li><a href="./csig/user?status=send-docs">Send docs</a></li>
   </ul>
   <hr>
   <h3>Email notifications</h3>
