--- a/views/csig/user/csig-completed.html
+++ b/views/csig/user/csig-completed.html
@@ -6,11 +6,11 @@
   {{< hmpo-partials-form}}
     {{$form}}
       <header class="update-notice update-notice--grey">
-        <h1>Person has confirmed your identity</h1>
+        <h1>Identity details received</h1>
       </header>
 
-      <p>Charlotte Moore has provided details online to help us confirm your identity. We’re checking these details.</p>
-      <p>We’ll text and email you when your application is approved.</p>
+      <p>Charlotte Moore has provided details to help us confirm your identity. We’re checking these details.</p>
+      <p>We’ll email you when your application is approved.</p>
 
       <hr>
       <h2>Application history</h2>
@@ -18,7 +18,7 @@
         <table>
           <tbody>
             <tr>
-              <td>Person has confirmed your identity</td>
+              <td>Identity details received</td>
               <td>2:05pm on 27 July 2018</td>
             </tr>
             <tr>
