--- a/views/ftas/intro/error.html
+++ b/views/ftas/intro/error.html
@@ -14,7 +14,7 @@
 
 <p>If this keeps happening, contact the company that provided your digital photo.</p>
 
-<a href="/ftas/intro/get-photo-code" class="button">Try again</a><br/><br/>
+<a href="/intro/get-photo-code" class="button">Try again</a><br/><br/>
 
 {{/content}}
 
