--- a/views/ftas/intro/photo-retrieved.html
+++ b/views/ftas/intro/photo-retrieved.html
@@ -21,7 +21,7 @@
 
         <p>Your photo must be taken in the last month.</p> 
 
-        <a href="/ftas/uploadphoto" class="button">Use this photo</a><br/><br/>
+        <a href="/uploadphoto" class="button">Use this photo</a><br/><br/>
         <a href="you-need-a-photo">I don't want to use this photo</a></p>
 
          <p><div role="note" aria-label="Information" class="panel panel-border-wide application-notice info-notice">
