--- a/views/ftas/photoguide-shop/transfer-photo.html
+++ b/views/ftas/photoguide-shop/transfer-photo.html
@@ -2,7 +2,7 @@
 
 {{$back}}
 <div class="photo-guide">
-            <a href="/../ftas/intro/choose-photo-method" class="back-link">Other ways to get a photo</a>
+            <a href="/../intro/choose-photo-method" class="back-link">Other ways to get a photo</a>
             <span class="marker">Guide part 4 of 4</span>
         </div>
 {{/back}}
@@ -25,10 +25,10 @@
                   <nav class="guide-nav">
                             <ul>
                                 <li class="button-guide button-guide-previous">
-                                    <a href="/ftas/photoguide-shop/what-you-get">Back</a>
+                                    <a href="/photoguide-shop/what-you-get">Back</a>
                                 </li>
                                 <li class="button-guide button-guide-next">
-                                    <a href="/ftas/upload">Next</a>
+                                    <a href="/upload">Next</a>
                                 </li>
                             </ul>
                   </nav>
