--- a/views/ftas/startpage/index.html
+++ b/views/ftas/startpage/index.html
@@ -23,7 +23,7 @@
 </ul>
 
 <p id="get-started" class="get-started group">
-    <a href="/../ftas/filter" class="big button js-gaevent" role="button" data-gakey="start" data-galabel="or">Start</a>
+    <a href="/../filter" class="big button js-gaevent" role="button" data-gakey="start" data-galabel="or">Start</a>
 </p>
 <br/>
 
