--- a/views/ftas/takephoto/index.html
+++ b/views/ftas/takephoto/index.html
@@ -7,14 +7,14 @@
 {{/header}}
 
 {{$content}}
-<p >Your photo must meet the rules for digital passport photos. <a href="/../ftas/photoguide-short">Read the photo guide</a>.</p>
+<p >Your photo must meet the rules for digital passport photos. <a href="/../photoguide-short">Read the photo guide</a>.</p>
 
 <div role="note" aria-label="Information" class="panel panel-border-wide application-notice info-notice">
 
     <p>We’ll store all photos for up to 30 days in line with our <a href="" rel="external">privacy policy</a>.</p>
   </div>
 
-        <a href="/ftas/uploadphoto/" class="button">Upload your photo</a><br/><br/>
+        <a href="/uploadphoto/" class="button">Upload your photo</a><br/><br/>
 
         <details>
             <summary><span class="summary">I have a printed photo</span></summary>
