--- a/views/ftas/upload/index.html
+++ b/views/ftas/upload/index.html
@@ -7,10 +7,10 @@
 {{/header}}
 
 {{$content}}
-        <p >Your photo must be taken in the last month and meet the <br><a href="/../ftas/photoguide-static/photorules"> rules for passport photos</a>.</p>
+        <p >Your photo must be taken in the last month and meet the <br><a href="/../photoguide-static/photorules"> rules for passport photos</a>.</p>
 
 
-        <a href="/ftas/uploadphoto/" class="button">Upload your photo</a><br/><br/>
+        <a href="/uploadphoto/" class="button">Upload your photo</a><br/><br/>
 
       <!--  <details>
             <summary><span class="summary">I have a printed photo</span></summary>
